Add longer version

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 GENAISCRIPT_DEFAULT_MODEL="azure:gpt-4o-mini"
+GENAISCRIPT_SMALL_MODEL="azure:gpt-4o-mini"
+GENAISCRIPT_LARGE_MODEL="azure:gpt-4o"
+GENAISCRIPT_REASONING_MODEL="azure:o3-mini"
 GENAISCRIPT_IMAGE_MODEL="azure:dall-e-3"
 
 # Azure OpenAI endpoint
 AZURE_OPENAI_API_ENDPOINT=
 
-# Needed for Dall-E (MI can be used otherwise)
+# Needed for Dall-E (Managed Identity can be used otherwise)
 AZURE_OPENAI_API_KEY=
 
 # Needed for the GitHub API
